--- a/uclouvain/frontend/src/components/StartConversation.module.css
+++ b/uclouvain/frontend/src/components/StartConversation.module.css
@@ -6,5 +6,6 @@
     border-radius: 30px;
     padding: 30px;
     font-size: large;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+    resize: none;
 }
